--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,6 @@
         }
     },
     "extra": {
-        "bootstrap": "derekisbusy\\forcecopy\\ForceCopyExtension"
+        "bootstrap": "derekisbusy\\forcecopy\\ForcecopyExtension"
     }
 }
